--- a/BikeDaCity/app/src/main/res/menu/mainmenu.xml
+++ b/BikeDaCity/app/src/main/res/menu/mainmenu.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/about"
         android:title="@string/about_entry" />
+    <item
+        android:id="@+id/settings"
+        android:title="Preferences" />
 </menu>
