--- a/BikeDaCity/app/src/main/res/xml/pref_headers.xml
+++ b/BikeDaCity/app/src/main/res/xml/pref_headers.xml
@@ -4,7 +4,12 @@
 
     <header
         android:fragment="it.unipi.iet.bikedacity.SettingsActivity$GeneralPreferenceFragment"
-        android:icon="@drawable/ic_info_black_24dp"
-        android:title="@string/pref_header_general" />
+        android:icon="@drawable/ic_map_black_24dp"
+        android:title="@string/pref_header_location" />
+
+    <header
+        android:fragment="it.unipi.iet.bikedacity.SettingsActivity$GeneralPreferenceFragment"
+        android:icon="@drawable/ic_place_black_24dp"
+        android:title="@string/pref_header_map" />
 
 </preference-headers>
