--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:layout_height="360dp" />
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/stationList"
             android:layout_width="match_parent"
             android:layout_height="494dp"
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
