--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -14,26 +14,49 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:id="@+id/textView"
+        <ProgressBar
+            android:id="@+id/indeterminateBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/infoBox"
+                android:layout_width="356dp"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+            <Button
+                android:id="@+id/ButtonTest"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_autorenew_24px"
+                android:visibility="visible" />
+        </LinearLayout>
 
         <org.osmdroid.views.MapView
             android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="360dp" />
+            android:layout_height="348dp">
+
+        </org.osmdroid.views.MapView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/stationList"
             android:layout_width="match_parent"
-            android:layout_height="494dp"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
             tools:layout_editor_absoluteX="16dp" />
     </LinearLayout>
