--- a/BikeDaCity/app/src/main/res/layout/station_layout.xml
+++ b/BikeDaCity/app/src/main/res/layout/station_layout.xml
@@ -5,25 +5,27 @@
     android:layout_height="wrap_content"
     android:paddingTop="2dp"
     android:paddingBottom="2dp">
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:layout_height="38dp"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp">
 
         <TextView
             android:id="@+id/station_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            />
+            android:textSize="12sp" />
 
         <Button
-            android:id="@+id/message_button"
-            android:layout_width="59dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/view_on_map"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:background="@drawable/ic_map_black_24dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -32,8 +34,8 @@
 
     <TextView
         android:id="@+id/station_distance"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_marginTop="4dp"
+        android:textSize="8sp" />
 </LinearLayout>
