--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -26,24 +26,29 @@
             android:layout_height="wrap_content"
             android:indeterminate="true" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/infoBox"
-                android:layout_width="356dp"
+                android:layout_width="344dp"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:text=""
+                android:textSize="12sp" />
 
             <Button
-                android:id="@+id/ButtonTest"
+                android:id="@+id/refreshMap"
+                android:onClick="refreshMap"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="4dp"
                 android:background="@drawable/ic_autorenew_24px"
-                android:visibility="visible" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <org.osmdroid.views.MapView
