--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -6,65 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="top|start"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+    <ProgressBar
+        android:id="@+id/indeterminateBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="9dp"
+        android:indeterminate="true" />
+
+    <TextView
+        android:id="@+id/infoBox"
+        android:layout_width="344dp"
+        android:layout_height="16dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
+        android:text=""
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/map"
+        app:layout_constraintEnd_toStartOf="@+id/refreshMap"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/indeterminateBar" />
 
-        <ProgressBar
-            android:id="@+id/indeterminateBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:indeterminate="true" />
+    <Button
+        android:id="@+id/refreshMap"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/ic_autorenew_18px"
+        android:onClick="refreshMap"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/infoBox"
+        app:layout_constraintTop_toBottomOf="@+id/indeterminateBar" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:orientation="horizontal">
+    <org.osmdroid.views.MapView
+        android:id="@+id/map"
+        android:layout_width="384dp"
+        android:layout_height="323dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/refreshMap">
 
-            <TextView
-                android:id="@+id/infoBox"
-                android:layout_width="344dp"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="12sp" />
+    </org.osmdroid.views.MapView>
 
-            <Button
-                android:id="@+id/refreshMap"
-                android:onClick="refreshMap"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="4dp"
-                android:background="@drawable/ic_autorenew_24px"
-                android:visibility="invisible" />
-        </LinearLayout>
-
-        <org.osmdroid.views.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="348dp">
-
-        </org.osmdroid.views.MapView>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/stationList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout"
-            tools:layout_editor_absoluteX="16dp" />
-    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/stationList"
+        android:layout_width="383dp"
+        android:layout_height="183dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/map"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
 
 
 </android.support.constraint.ConstraintLayout>
