--- a/BikeDaCity/app/src/main/res/layout/station_layout.xml
+++ b/BikeDaCity/app/src/main/res/layout/station_layout.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/station_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/station_name"
-        android:layout_width="317dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="0dp"
+        android:layout_height="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/station_details"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/view_on_map"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/view_on_map"
-        android:layout_width="50dp"
-        android:layout_height="48dp"
+        android:layout_width="39dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="2dp"
         android:background="@drawable/ic_map_black_18dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
@@ -29,13 +38,16 @@
     <TextView
         android:id="@+id/station_details"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="13dp"
         android:layout_marginBottom="2dp"
         android:layout_marginEnd="8dp"
-        android:textSize="8sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/view_on_map"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/station_name" />
+        app:layout_constraintTop_toBottomOf="@+id/station_name"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
