--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_height="25dp"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/ic_autorenew_18px"
+        android:background="@drawable/refresh"
         android:onClick="refreshMap"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/map"
