--- a/BikeDaCity/app/src/main/res/layout/station_layout.xml
+++ b/BikeDaCity/app/src/main/res/layout/station_layout.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/ic_map_black_18dp"
+        android:background="@drawable/view_on_map"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
