Added new menu key

--- a/BikeDaCity/app/src/main/res/menu/main_menu.xml
+++ b/BikeDaCity/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/settings"
         android:title="Preferences" />
+    <item
+        android:id="@+id/show_option"
+        android:title="Show ..." />
 </menu>
