--- a/BikeDaCity/app/src/main/res/values/settings.xml
+++ b/BikeDaCity/app/src/main/res/values/settings.xml
@@ -5,6 +5,7 @@
     <string name="pref_header_map">Map Settings</string>
 
     <!-- Location settings -->
+    <string name="default_pref_location_value">10000</string>
     <string name="pref_location_interval_title">Location update time</string>
     <string-array name="pref_interval_location_entries">
         <item>Manually</item>
@@ -22,9 +23,10 @@
         <item>10000</item>
         <item>20000</item>
         <item>30000</item>
-    </string-array>
+    </string-array>>
 
     <!-- Map settings -->
+    <string name="default_pref_view_value">0</string>
     <string-array name="pref_default_view_entries">
         <item>Available places</item>
         <item>Free bikes</item>
@@ -34,23 +36,24 @@
         <item>1</item>
     </string-array>
 
+    <string name="default_view_station_value">2</string>
     <string-array name="pref_view_station_entries">
         <item>High availability only</item>
         <item>Up to medium availability</item>
         <item>Up to low availability</item>
-        <item>All availability</item>
+        <item>All availabilities</item>
     </string-array>
     <string-array name="pref_view_station_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
         <item>3</item>
+        <item>2</item>
+        <item>1</item>
+        <item>0</item>
     </string-array>
 
     <!-- Key used for shared preferences -->
     <string name="default_view_station_key">default_station_view</string>
     <string name="location_interval_list_key">location_interval_list</string>
-    <string name="map_default_view_list_key">default_view</string>
+    <string name="default_view_list_key">default_view</string>
     <string name="show_available_places">show_available_places</string>
 
     <!-- Titles -->
@@ -61,6 +64,6 @@
 
     <!-- Summaries -->
     <string name="default_view_summary">Select the view you use more frequently</string>
-    <string name="pref_location_interval_summary">After how many seconds the app update the location</string>
+    <string name="pref_location_interval_summary">After how many seconds the app updates the location</string>
     <string name="pref_view_station_default_summary">%1$s</string>
 </resources>
