--- a/BikeDaCity/app/src/main/res/xml/pref_general.xml
+++ b/BikeDaCity/app/src/main/res/xml/pref_general.xml
@@ -5,12 +5,10 @@
         android:key="pref_key_location_setting">
 
         <ListPreference
-            android:defaultValue="10"
+            android:defaultValue="@string/default_pref_location_value"
             android:entries="@array/pref_interval_location_entries"
             android:entryValues="@array/pref_interval_location_values"
             android:key="@string/location_interval_list_key"
-            android:negativeButtonText="@null"
-            android:positiveButtonText="@null"
             android:title="@string/pref_location_interval_title"
             android:summary="@string/pref_location_interval_summary"/>
 
@@ -22,17 +20,15 @@
         android:key="pref_map_category_key">
 
         <ListPreference
-            android:defaultValue="0"
+            android:defaultValue="@string/default_pref_view_value"
             android:entries="@array/pref_default_view_entries"
             android:entryValues="@array/pref_default_view_values"
-            android:key="@string/map_default_view_list_key"
-            android:negativeButtonText="@null"
-            android:positiveButtonText="@null"
+            android:key="@string/default_view_list_key"
             android:title="@string/pref_default_view_title"
             android:summary="@string/default_view_summary"/>
 
         <ListPreference
-            android:defaultValue="2"
+            android:defaultValue="@string/default_view_station_value"
             android:entries="@array/pref_view_station_entries"
             android:entryValues="@array/pref_view_station_values"
             android:key="@string/default_view_station_key"
