--- a/BikeDaCity/app/src/main/res/values/settings.xml
+++ b/BikeDaCity/app/src/main/res/values/settings.xml
@@ -54,7 +54,6 @@
     <string name="default_view_station_key">default_station_view</string>
     <string name="location_interval_list_key">location_interval_list</string>
     <string name="default_view_list_key">default_view</string>
-    <string name="show_available_places">show_available_places</string>
 
     <!-- Titles -->
     <string name="pref_location_category_name">Location Settings</string>
@@ -66,4 +65,9 @@
     <string name="default_view_summary">Select the view you use more frequently</string>
     <string name="pref_location_interval_summary">After how many seconds the app updates the location</string>
     <string name="pref_view_station_default_summary">%1$s</string>
+
+    <!-- Key used for getting the app's state restored when paused or something else -->
+    <string name="pref_show_available_places">showAvailablePlaces</string>
+    <string name="pref_visible_overlays">visibleOverlays</string>
+
 </resources>
