--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
     <Button
         android:id="@+id/view_overlay_button"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="25dp"
+        android:layout_width="40dp"
         android:layout_height="25dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
@@ -80,7 +80,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/station_list"
         android:layout_width="383dp"
-        android:layout_height="97dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/map"
         app:layout_constraintTop_toBottomOf="@+id/my_location_button" />
