--- a/BikeDaCity/app/src/main/res/xml/pref_general.xml
+++ b/BikeDaCity/app/src/main/res/xml/pref_general.xml
@@ -37,6 +37,15 @@
             android:title="@string/pref_view_station_title"
             android:summary="@string/pref_view_station_default_summary"/>
 
+        <ListPreference
+            android:defaultValue="@string/default_zoom_value"
+            android:entries="@array/pref_zoom_entries"
+            android:entryValues="@array/pref_zoom_values"
+            android:key="@string/default_view_station_key"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:title="@string/pref_zoom_title"
+            android:summary="@string/pref_view_station_default_summary"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
