--- a/BikeDaCity/app/src/main/res/xml/pref_general.xml
+++ b/BikeDaCity/app/src/main/res/xml/pref_general.xml
@@ -41,11 +41,11 @@
             android:defaultValue="@string/default_zoom_value"
             android:entries="@array/pref_zoom_entries"
             android:entryValues="@array/pref_zoom_values"
-            android:key="@string/default_view_station_key"
+            android:key="@string/zoom_list_key"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"
             android:title="@string/pref_zoom_title"
-            android:summary="@string/pref_view_station_default_summary"/>
+            android:summary="@string/pref_zoom_summary"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
