--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         android:layout_height="25dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/ic_my_location_24px"
-        android:onClick="centreMapOnCurrentLocation"
+        android:onClick="centreMapOnMyPosition"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
