Fixed zoom and visible overlay button problems
Zoom was put into a preference setting key which was the cause of the
problem at application start.
Visible overlay button now has the right icon loaded.

--- a/BikeDaCity/app/src/main/res/layout/activity_main.xml
+++ b/BikeDaCity/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/station_list"
         android:layout_width="383dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/map"
         app:layout_constraintTop_toBottomOf="@+id/my_location_button" />
