Adjusted icons for overlay visibility

--- a/BikeDaCity/app/src/main/res/drawable/ic_autorenew_24px.xml
+++ b/BikeDaCity/app/src/main/res/drawable/ic_autorenew_24px.xml
@@ -1,9 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="6.35"
+    android:viewportHeight="6.35">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M12,6v3l4,-4 -4,-4v3c-4.42,0 -8,3.58 -8,8 0,1.57 0.46,3.03 1.24,4.26L6.7,14.8c-0.45,-0.83 -0.7,-1.79 -0.7,-2.8 0,-3.31 2.69,-6 6,-6zM18.76,7.74L17.3,9.2c0.44,0.84 0.7,1.79 0.7,2.8 0,3.31 -2.69,6 -6,6v-3l-4,4 4,4v-3c4.42,0 8,-3.58 8,-8 0,-1.57 -0.46,-3.03 -1.24,-4.26z"/>
+      android:pathData="M3.175,1.5875L3.175,2.38125L4.23333,1.32292 3.175,0.26458l0,0.79375c-1.16946,0 -2.11667,0.94721 -2.11667,2.11667 0,0.4154 0.12171,0.80169 0.32808,1.12713L1.77271,3.91583C1.65365,3.69623 1.5875,3.44223 1.5875,3.175 1.5875,2.29923 2.29923,1.5875 3.175,1.5875ZM4.96358,2.04787 L4.57729,2.43417c0.11642,0.22225 0.18521,0.4736 0.18521,0.74083 0,0.87577 -0.71173,1.5875 -1.5875,1.5875l0,-0.79375l-1.05833,1.05833 1.05833,1.05833l0,-0.79375c1.16946,0 2.11667,-0.94721 2.11667,-2.11667 0,-0.4154 -0.12171,-0.80169 -0.32808,-1.12713z"
+      android:fillColor="#00aa00"
+      android:fillAlpha="1"/>
 </vector>
