--- a/BikeDaCity/app/src/main/res/drawable/ic_place_view_all_h24.xml
+++ b/BikeDaCity/app/src/main/res/drawable/ic_place_view_all_h24.xml
@@ -4,27 +4,27 @@
     android:viewportWidth="10.583333"
     android:viewportHeight="6.35">
   <path
-      android:pathData="M7.2979,3.175m-3.1447,0a3.1447,3.1447 0,1 1,6.2894 0a3.1447,3.1447 0,1 1,-6.2894 0"
+      android:pathData="M7.3004,3.175m-3.1485,0a3.1485,3.1485 0,1 1,6.2971 0a3.1485,3.1485 0,1 1,-6.2971 0"
       android:strokeWidth="0.16435724"
       android:fillColor="#d40000"
       android:fillAlpha="1"/>
   <path
-      android:pathData="M5.8255,3.175m-3.1447,0a3.1447,3.1447 0,1 1,6.2894 0a3.1447,3.1447 0,1 1,-6.2894 0"
+      android:pathData="M5.8262,3.175m-3.1485,0a3.1485,3.1485 0,1 1,6.2971 0a3.1485,3.1485 0,1 1,-6.2971 0"
       android:strokeWidth="0.16435724"
       android:fillColor="#d3bc5f"
       android:fillAlpha="1"/>
   <path
-      android:pathData="M4.525,3.175m-3.1447,0a3.1447,3.1447 0,1 1,6.2894 0a3.1447,3.1447 0,1 1,-6.2894 0"
+      android:pathData="M4.5241,3.175m-3.1485,0a3.1485,3.1485 0,1 1,6.2971 0a3.1485,3.1485 0,1 1,-6.2971 0"
       android:strokeWidth="0.16435724"
       android:fillColor="#89a02c"
       android:fillAlpha="1"/>
   <path
-      android:pathData="M3.2854,3.175m-3.1447,0a3.1447,3.1447 0,1 1,6.2894 0a3.1447,3.1447 0,1 1,-6.2894 0"
+      android:pathData="M3.283,3.175m-3.1485,0a3.1485,3.1485 0,1 1,6.2971 0a3.1485,3.1485 0,1 1,-6.2971 0"
       android:strokeWidth="0.16435724"
       android:fillColor="#00aa00"
       android:fillAlpha="1"/>
   <path
-      android:pathData="M3.4147,0.8476L1.6045,0.8476l0,4.6548l1.0344,0l0,-1.5516l0.7758,0c0.856,0 1.5516,-0.6956 1.5516,-1.5516 0,-0.856 -0.6956,-1.5516 -1.5516,-1.5516zM3.4664,2.9164l-0.8275,0l0,-1.0344l0.8275,0c0.2845,0 0.5172,0.2327 0.5172,0.5172 0,0.2845 -0.2327,0.5172 -0.5172,0.5172z"
-      android:strokeWidth="0.52400368"
+      android:pathData="m3.4154,0.7906h-1.8545v4.7688h1.0597v-1.5896h0.7948c0.8769,0 1.5896,-0.7127 1.5896,-1.5896 0,-0.8769 -0.7127,-1.5896 -1.5896,-1.5896zM3.4684,2.9101h-0.8478v-1.0597h0.8478c0.2914,0 0.5299,0.2384 0.5299,0.5299 0,0.2914 -0.2384,0.5299 -0.5299,0.5299z"
+      android:strokeWidth="0.26493043"
       android:fillColor="#ffffff"/>
 </vector>
